# aisix

./: CLAUDE.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  config.example.yaml  config.managed.yaml
.github/workflows/: ci.yml  docker-image.yml  objstore-cloud-identity.yml  objstore-real-cloud.yml  publish-docs-site.yml
crates/aisix-a2a/src/: bridge.rs  error.rs
crates/aisix-admin/: Cargo.toml
crates/aisix-admin/src/: a2a_agents_handlers.rs  apikeys_handlers.rs  auth.rs  error.rs  etcd_store.rs  lib.rs  models_handlers.rs  openapi.rs  playground_handler.rs  spend_handler.rs  state.rs  store.rs
crates/aisix-admin/tests/: etcd_integration.rs
crates/aisix-cache/: Cargo.toml
crates/aisix-cache/src/: key.rs  lib.rs  redis.rs  semantic.rs
crates/aisix-cache/tests/: redis_integration.rs
crates/aisix-core/: Cargo.toml
crates/aisix-core/src/: config.rs  error.rs  lib.rs  wildcard.rs
crates/aisix-core/src/models/: a2a_agent.rs  apikey.rs  cache_policy.rs  guardrail.rs  mod.rs  model.rs  observability_exporter.rs  provider_key.rs  rate_limit.rs  rate_limit_policy.rs  routing.rs  schema.rs  snapshot.rs
crates/aisix-etcd/: Cargo.toml
crates/aisix-etcd/src/: etcd_provider.rs  lib.rs  loader.rs  snapshot_cache.rs  supervisor.rs
crates/aisix-etcd/tests/: watch_integration.rs
crates/aisix-gateway/: Cargo.toml
crates/aisix-gateway/src/: bridge.rs  chat.rs  hub.rs  lib.rs  upstream_http.rs
crates/aisix-guardrails/: Cargo.toml
crates/aisix-guardrails/src/: aliyun.rs  bedrock.rs  build.rs  chain.rs  index.rs  keyword.rs  lakera.rs  length.rs  lib.rs  openai_moderation.rs  presidio.rs  prompt_shield.rs  text_moderation.rs
crates/aisix-mcp/: Cargo.toml
crates/aisix-mcp/src/: bridge.rs  error.rs  gateway.rs  lib.rs
crates/aisix-mcp/tests/: gateway_aggregation.rs  upstream_roundtrip.rs
crates/aisix-obs/: Cargo.toml
crates/aisix-obs/src/: access_log.rs  lib.rs  metrics.rs  otlp_http_sink.rs  usage.rs
crates/aisix-obs/src/sink/: mod.rs  object_store.rs  pipeline.rs  record.rs  truncate.rs
crates/aisix-provider-anthropic/: Cargo.toml
crates/aisix-provider-anthropic/src/: bridge.rs  lib.rs  wire.rs
crates/aisix-provider-azure-openai/: Cargo.toml
crates/aisix-provider-azure-openai/src/: aad_token_mint.rs  bridge.rs  lib.rs
crates/aisix-provider-bedrock/: Cargo.toml
crates/aisix-provider-bedrock/src/: bridge.rs  convert.rs  lib.rs  wire.rs
crates/aisix-provider-openai/: Cargo.toml
crates/aisix-provider-openai/src/: bridge.rs  overrides.rs  wire.rs
crates/aisix-provider-vertex/: Cargo.toml
crates/aisix-provider-vertex/src/: bridge.rs  lib.rs  token_mint.rs
crates/aisix-proxy/: AGENTS.md  Cargo.toml
crates/aisix-proxy/src/: a2a.rs  attempt.rs  audio.rs  auth.rs  background.rs  budget.rs  chat.rs  client_ip.rs  completions.rs  cooldown.rs  count_tokens.rs  dispatch.rs  embeddings.rs  ensemble.rs  error.rs  error_translate.rs  http_client.rs  images.rs  jobs.rs  lib.rs  mcp.rs  messages.rs  model_resolve.rs  models.rs  passthrough.rs  quota.rs  realtime.rs  redact.rs  render.rs  request_id.rs  rerank.rs  responses.rs  responses_bridge.rs  routing.rs  state.rs  stream_timeout.rs  usage_attr.rs  util.rs  videos.rs
crates/aisix-ratelimit/: Cargo.toml
crates/aisix-ratelimit/src/: lib.rs  limiter.rs
crates/aisix-ratelimit/src/store/: local.rs  mod.rs  redis.rs
crates/aisix-ratelimit/tests/: redis_integration.rs
crates/aisix-server/: Cargo.toml
crates/aisix-server/src/: cert_bundle.rs  heartbeat.rs  main.rs  register.rs  telemetry.rs
crates/aisix-server/src/export/: document.rs  mod.rs  secrets.rs  yaml_emit.rs
docker/: entrypoint.sh
docs/: api-admin.md  api-proxy.md  index.md  index.mdx  managed-mode.md  roadmap.md  testing.md
docs/architecture/: overview.md  protocol-translation.md  snapshot-and-watch.md  two-phase-rate-limit.md
docs/cloud/: cloud-playground.md  cloud-vs-self-hosted.md  gateway-certificates-and-managed-dp.md  offline-resilience.md  organizations-and-environments.md  overview.md  provider-key-rotation.md  resource-projection.md  usage-events-and-billing.md
docs/configuration/: admin-api.md  api-keys.md  bootstrap-config.md  budgets.md  byo-endpoint.md  caching.md  configuration-propagation.md  guardrails.md  models.md  observability-exporters.md  overview.md  provider-keys.md  rate-limits.md  routing-and-failover.md
docs/integration/: anthropic-messages.md  audio.md  embeddings.md  errors-and-retries.md  images.md  openai-compatible-api.md  overview.md  passthrough.md  provider-upstreams.md  rerank.md  responses.md  streaming.md  tool-calling.md  upstream-azure-openai.md  upstream-bedrock.md  upstream-openai-compat.md  upstream-vertex.md
docs/operations/: health-checks.md  metrics-and-logs.md  network-and-security.md  overview.md  production-deployment.md  testing-and-verification.md  tls-and-mtls.md  troubleshooting.md  upgrades-and-compatibility.md
docs/overview/: core-concepts.md  deployment-modes.md  feature-matrix.md  glossary.md  what-is-aisix-ai-gateway.md
docs/quickstart/: aisix-cloud-managed-dp.md  anthropic-sdk.md  first-model-first-key-first-request.md  openai-sdk.md  quickstart.md  self-hosted.md
docs/reference/: adapters.md  admin-api-reference.md  glossary.md  headers-and-error-codes.md  provider-compatibility.md  provider-key-schema.md  proxy-api-reference.md  resource-schemas.md
docs/tutorials/: add-keyword-guardrails.md  block-content-with-aws-bedrock-guardrails.md  block-prompt-injection-with-azure-content-safety.md  build-a-virtual-model-with-failover.md  enable-response-caching.md  load-gateway-logs-into-snowflake.md  openai-client-to-anthropic-upstream.md  overview.md
schemas/: README.md
schemas/resources/: a2a_agent.schema.json  api_key.schema.json  cache_policy.schema.json  guardrail.schema.json  model.schema.json  observability_exporter.schema.json  provider_key.schema.json  rate_limit.schema.json  rate_limit_policy.schema.json  routing.schema.json
tests/e2e/src/cases/: admin-disabled-e2e.test.ts  aliyun-sls-content-capture-e2e.test.ts  anthropic-upstream-e2e.test.ts  (+66 more)
(+5 files in other folders)
