[package]
name = "aisix-admin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "aisix: Admin API + Playground + OpenAPI"

[dependencies]
aisix-core = { path = "../aisix-core" }
aisix-etcd = { path = "../aisix-etcd" }
aisix-proxy = { path = "../aisix-proxy" }
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
async-trait.workspace = true
dashmap.workspace = true
etcd-client.workspace = true
aisix-obs = { path = "../aisix-obs" }
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
testcontainers.workspace = true
aisix-gateway = { path = "../aisix-gateway" }
aisix-provider-openai = { path = "../aisix-provider-openai" }
aisix-core = { path = "../aisix-core" }
wiremock.workspace = true
