[package]
name = "aisix-cache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "aisix: response cache (in-memory / Redis / semantic)"

[dependencies]
aisix-core = { path = "../aisix-core" }
aisix-gateway = { path = "../aisix-gateway" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
moka.workspace = true
redis = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time"] }
wiremock.workspace = true

[features]
default = ["memory"]
memory = []
redis = ["dep:redis"]
# Semantic cache backend — DP calls AISIX-Cloud's /dp/cache/{lookup,put}
# over HTTP. Cloud owns the embedding + pgvector similarity search;
# DP just plumbs the prompt + scope and the response. See issue #116.
semantic = ["dep:reqwest"]
