[package]
name = "aisix-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "aisix: Hub-and-Bridge gateway core (ChatFormat, BridgeContext, SSE parser)"

[dependencies]
aisix-core = { path = "../aisix-core" }
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
reqwest.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
http.workspace = true
dashmap.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
