[package]
name = "aisix-guardrails"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "aisix: pluggable guardrails (pre_call / during_call / post_call)"

[dependencies]
aisix-core = { path = "../aisix-core" }
aisix-gateway = { path = "../aisix-gateway" }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
regex.workspace = true

# kind=bedrock guardrail (PRD-09c §6 Phase 2). Behind a default
# feature so a build that never touches Bedrock can opt out via
# `--no-default-features` on this crate to avoid the AWS SDK
# transitive cost (~30s cold build + ~150 transitive crates).
aws-config = { workspace = true, optional = true }
aws-sdk-bedrockruntime = { workspace = true, optional = true }
aws-credential-types = { workspace = true, optional = true }
aws-smithy-async = { workspace = true, optional = true }
aws-smithy-runtime-api = { workspace = true, optional = true }
aws-smithy-types = { workspace = true, optional = true }

[features]
default = ["bedrock"]
bedrock = [
    "dep:aws-config",
    "dep:aws-sdk-bedrockruntime",
    "dep:aws-credential-types",
    "dep:aws-smithy-async",
    "dep:aws-smithy-runtime-api",
    "dep:aws-smithy-types",
]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
