[package]
name = "aisix-provider-vertex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "aisix: Google Vertex AI provider bridge (skeleton — multi-publisher dispatch)"

[dependencies]
aisix-core = { path = "../aisix-core" }
aisix-gateway = { path = "../aisix-gateway" }
# Claude on Vertex reuses the Anthropic Messages request serializer +
# response decoder (same crate the Bedrock /invoke path reuses) — the
# Vertex `:rawPredict` body is Anthropic Messages JSON with a
# Vertex-specific `anthropic_version`.
aisix-provider-anthropic = { path = "../aisix-provider-anthropic" }
async-trait.workspace = true
async-stream = "0.3"
bytes.workspace = true
futures.workspace = true
jsonwebtoken = "9"
thiserror.workspace = true
tracing.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
http.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time"] }
wiremock.workspace = true
